Added Javadoc comments, and made a few style-check fixes.